--- a/Pasteleria-mil-sabores (Luyi.T)/blog1.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/blog1.html
@@ -4,21 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasteleria Mil Sabores</title>
+    <title>Récord Guinness 1995 - Mil Sabores</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pacifico&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/estilo-productos.css">
-</head>
 </head>
 
-<body class="bg-crema">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.jpg" alt="Logo Mil Sabores" width="900" class="me-2">
-                    <h1 class="titulo-brand mb-0">Pasteleria Mil Sabores</h1>
+                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -48,48 +47,28 @@
         </nav>
     </header>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>TIENDA ONLINE</h2>
-                <p>Ofrecemos una experiencia dulce y memorable con productos de alta calidad.</p>
-                <a href="productos.html" class="btn-chocolate">Ver productos</a>
-            </div>
-            <div class="hero-image">
-                <img src="img/hero-pasteleria.jpg" alt="Nuestras Tortas">
-            </div>
-        </section>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-10 bg-white p-5 rounded shadow-sm">
+                <h2 class="titulo-artistico mb-4">Nuestra Participación en el Récord Guinness</h2>
+                <img src="img/blog-guinness-grande.jpg" class="img-fluid rounded mb-4 w-100" alt="Torta Gigante 1995">
 
-        <section class="featured-products">
-            <h1>Nuestras Especialidades</h1>
-            <div id="lista-productos" class="product-grid">
-            </div>
-        </section>
-    </main>
+                <div class="content-text">
+                    <p class="lead fw-bold">En 1995, Pastelería Mil Sabores hizo historia al colaborar en la creación de
+                        la torta más grande del mundo.</p>
+                    <p>Este evento no solo puso a nuestra pastelería en el mapa internacional, sino que también demostró
+                        la capacidad técnica y el corazón de nuestros maestros pasteleros. Participamos junto a un gran
+                        equipo para batir el récord Guinness, utilizando toneladas de ingredientes de la más alta
+                        calidad.</p>
+                    <p>Hoy, 50 años después de nuestra fundación, recordamos ese momento con nostalgia y orgullo,
+                        manteniendo siempre el estándar de excelencia que nos permitió alcanzar esa hazaña.
+                    </p>
+                </div>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-info">
-                <h4>Pastelería Mil Sabores</h4>
-                <p>50 años siendo un referente en la repostería chilena. [cite: 8]</p>
-            </div>
-            <div class="footer-categories">
-                <h4>Categorías</h4>
-                <ul>
-                    <li>Tortas Cuadradas</li>
-                    <li>Tortas Circulares</li>
-                    <li>Sin Azúcar</li>
-                </ul>
-            </div>
-            <div class="newsletter">
-                <h4>Stay In Touch</h4>
-                <input type="email" placeholder="Enter Email">
-                <button>Subscribe</button>
+                <a href="blogs.html" class="btn btn-chocolate mt-4">Volver a Noticias</a>
             </div>
         </div>
-    </footer>
-
-    <script src="js/productos.js"></script>
+    </main>
 
 </body>
 
