--- a/Pasteleria-mil-sabores (Luyi.T)/blog2.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/blog2.html
@@ -4,21 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasteleria Mil Sabores</title>
+    <title>Secretos de Repostería - Mil Sabores</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pacifico&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/estilo-productos.css">
-</head>
 </head>
 
-<body class="bg-crema">
+<body>
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.jpg" alt="Logo Mil Sabores" width="900" class="me-2">
-                    <h1 class="titulo-brand mb-0">Pasteleria Mil Sabores</h1>
+                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -48,48 +47,28 @@
         </nav>
     </header>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>TIENDA ONLINE</h2>
-                <p>Ofrecemos una experiencia dulce y memorable con productos de alta calidad.</p>
-                <a href="productos.html" class="btn-chocolate">Ver productos</a>
-            </div>
-            <div class="hero-image">
-                <img src="img/hero-pasteleria.jpg" alt="Nuestras Tortas">
-            </div>
-        </section>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-10 bg-white p-5 rounded shadow-sm">
+                <h2 class="titulo-artistico mb-4">El Secreto de la Receta Familiar</h2>
+                <img src="img/blog-receta-detalle.jpg" class="img-fluid rounded mb-4 w-100" alt="Maestros Pasteleros">
 
-        <section class="featured-products">
-            <h1>Nuestras Especialidades</h1>
-            <div id="lista-productos" class="product-grid">
-            </div>
-        </section>
-    </main>
+                <div class="content-text">
+                    <p class="lead fw-bold">Nuestras recetas son el resultado de 50 años de tradición y amor por la
+                        repostería chilena[cite: 8].</p>
+                    <p>Cada una de nuestras tortas, desde la clásica de Manjar hasta nuestras innovadoras opciones
+                        Veganas, se basa en procesos artesanales. Detallamos la historia y el origen de nuestras recetas
+                        tradicionales para que nuestros clientes conozcan el valor de lo que llevan a su mesa[cite: 89,
+                        108].</p>
+                    <p>Además, trabajamos de la mano con estudiantes de gastronomía para fomentar la creatividad y el
+                        talento nuevo en el área, asegurando que la dulzura de Pastelería Mil Sabores perdure por muchas
+                        generaciones más.</p>
+                </div>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-info">
-                <h4>Pastelería Mil Sabores</h4>
-                <p>50 años siendo un referente en la repostería chilena. [cite: 8]</p>
-            </div>
-            <div class="footer-categories">
-                <h4>Categorías</h4>
-                <ul>
-                    <li>Tortas Cuadradas</li>
-                    <li>Tortas Circulares</li>
-                    <li>Sin Azúcar</li>
-                </ul>
-            </div>
-            <div class="newsletter">
-                <h4>Stay In Touch</h4>
-                <input type="email" placeholder="Enter Email">
-                <button>Subscribe</button>
+                <a href="blogs.html" class="btn btn-chocolate mt-4">Volver a Noticias</a>
             </div>
         </div>
-    </footer>
-
-    <script src="js/productos.js"></script>
+    </main>
 
 </body>
 
