--- a/Pasteleria-mil-sabores (Luyi.T)/contacto.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/contacto.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pasteleria Mil Sabores</title>
+    <title>Contactanos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Pacifico&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="css/estilos.css">
-    <link rel="stylesheet" href="css/estilo-productos.css">
 </head>
 </head>
 
@@ -17,8 +17,8 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.jpg" alt="Logo Mil Sabores" width="900" class="me-2">
-                    <h1 class="titulo-brand mb-0">Pasteleria Mil Sabores</h1>
+                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -48,48 +48,38 @@
         </nav>
     </header>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h2>TIENDA ONLINE</h2>
-                <p>Ofrecemos una experiencia dulce y memorable con productos de alta calidad.</p>
-                <a href="productos.html" class="btn-chocolate">Ver productos</a>
-            </div>
-            <div class="hero-image">
-                <img src="img/hero-pasteleria.jpg" alt="Nuestras Tortas">
-            </div>
-        </section>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-6 card shadow-sm p-4 border-0">
+                <div class="text-center mb-4">
+                    <img src="img/logo.png" alt="Logo" width="60" class="mb-2">
+                    <h2 class="titulo-artistico">Formulario de Contacto</h2>
+                </div>
+                
+                <form id="contacto-form">
+                    <div class="mb-3">
+                        <label class="form-label fw-bold">NOMBRE COMPLETO</label>
+                        <input type="text" id="contacto-nombre" class="form-control" maxlength="100" required>
+                    </div>
 
-        <section class="featured-products">
-            <h1>Nuestras Especialidades</h1>
-            <div id="lista-productos" class="product-grid">
-            </div>
-        </section>
-    </main>
+                    <div class="mb-3">
+                        <label class="form-label fw-bold">CORREO</label>
+                        <input type="email" id="contacto-correo" class="form-control" maxlength="100" placeholder="ejemplo@gmail.com" required>
+                    </div>
 
-    <footer>
-        <div class="footer-container">
-            <div class="footer-info">
-                <h4>Pastelería Mil Sabores</h4>
-                <p>50 años siendo un referente en la repostería chilena. [cite: 8]</p>
-            </div>
-            <div class="footer-categories">
-                <h4>Categorías</h4>
-                <ul>
-                    <li>Tortas Cuadradas</li>
-                    <li>Tortas Circulares</li>
-                    <li>Sin Azúcar</li>
-                </ul>
-            </div>
-            <div class="newsletter">
-                <h4>Stay In Touch</h4>
-                <input type="email" placeholder="Enter Email">
-                <button>Subscribe</button>
+                    <div class="mb-3">
+                        <label class="form-label fw-bold">COMENTARIO</label>
+                        <textarea id="contacto-comentario" class="form-control" rows="5" maxlength="500" required></textarea>
+                        <div id="char-count" class="text-end small text-muted">0 / 500</div>
+                    </div>
+
+                    <button type="submit" class="btn btn-chocolate w-100 py-2">ENVIAR MENSAJE</button>
+                </form>
             </div>
         </div>
-    </footer>
+    </main>
 
-    <script src="js/productos.js"></script>
+    <script src="js/contacto.js"></script>
 
 </body>
 
