--- a/Pasteleria-mil-sabores (Luyi.T)/blog1.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/blog1.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <img src="img/logo.jpg" alt="Logo Mil Sabores" class="me-2">
                     <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
@@ -26,11 +26,11 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="blogs.html">Blogs</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="contacto.html">Contacto</a></li>
                     </ul>
 
                     <div class="d-flex align-items-center user-menu">
@@ -51,7 +51,7 @@
         <div class="row justify-content-center">
             <div class="col-md-10 bg-white p-5 rounded shadow-sm">
                 <h2 class="titulo-artistico mb-4">Nuestra Participación en el Récord Guinness</h2>
-                <img src="img/blog-guinness-grande.jpg" class="img-fluid rounded mb-4 w-100" alt="Torta Gigante 1995">
+                <img src="img/blog-guinness.jpg" class="img-fluid rounded mb-4 w-100" alt="Torta Gigante 1995">
 
                 <div class="content-text">
                     <p class="lead fw-bold">En 1995, Pastelería Mil Sabores hizo historia al colaborar en la creación de
