--- a/Pasteleria-mil-sabores (Luyi.T)/blog2.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/blog2.html
@@ -16,7 +16,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <img src="img/logo.jpg" alt="Logo Mil Sabores" class="me-2">
                     <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
@@ -26,11 +26,11 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="blogs.html">Blogs</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="contacto.html">Contacto</a></li>
                     </ul>
 
                     <div class="d-flex align-items-center user-menu">
@@ -51,15 +51,15 @@
         <div class="row justify-content-center">
             <div class="col-md-10 bg-white p-5 rounded shadow-sm">
                 <h2 class="titulo-artistico mb-4">El Secreto de la Receta Familiar</h2>
-                <img src="img/blog-receta-detalle.jpg" class="img-fluid rounded mb-4 w-100" alt="Maestros Pasteleros">
+                <img src="img/blog-receta.jpg" class="img-fluid rounded mb-4 w-100" alt="Maestros Pasteleros">
 
                 <div class="content-text">
                     <p class="lead fw-bold">Nuestras recetas son el resultado de 50 años de tradición y amor por la
-                        repostería chilena[cite: 8].</p>
+                        repostería chilena.</p>
                     <p>Cada una de nuestras tortas, desde la clásica de Manjar hasta nuestras innovadoras opciones
                         Veganas, se basa en procesos artesanales. Detallamos la historia y el origen de nuestras recetas
-                        tradicionales para que nuestros clientes conozcan el valor de lo que llevan a su mesa[cite: 89,
-                        108].</p>
+                        tradicionales para que nuestros clientes conozcan el valor de lo que llevan a su mesa,
+                        .</p>
                     <p>Además, trabajamos de la mano con estudiantes de gastronomía para fomentar la creatividad y el
                         talento nuevo en el área, asegurando que la dulzura de Pastelería Mil Sabores perdure por muchas
                         generaciones más.</p>
