--- a/Pasteleria-mil-sabores (Luyi.T)/blogs.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/blogs.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <img src="img/logo.jpg" alt="Logo Mil Sabores" class="me-2">
                     <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
@@ -23,11 +23,11 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="blogs.html">Blogs</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="contacto.html">Contacto</a></li>
                     </ul>
 
                     <div class="d-flex align-items-center user-menu">
