--- a/Pasteleria-mil-sabores (Luyi.T)/contacto.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/contacto.html
@@ -17,7 +17,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <img src="img/logo.jpg" alt="Logo Mil Sabores" class="me-2">
                     <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
@@ -27,11 +27,12 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item"><a class="nav-link nav-principal" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="blogs.html">Blogs</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="contacto.html">Contacto</a></li>
                     </ul>
 
                     <div class="d-flex align-items-center user-menu">
@@ -55,7 +56,7 @@
                     <img src="img/logo.png" alt="Logo" width="60" class="mb-2">
                     <h2 class="titulo-artistico">Formulario de Contacto</h2>
                 </div>
-                
+
                 <form id="contacto-form">
                     <div class="mb-3">
                         <label class="form-label fw-bold">NOMBRE COMPLETO</label>
@@ -64,12 +65,14 @@
 
                     <div class="mb-3">
                         <label class="form-label fw-bold">CORREO</label>
-                        <input type="email" id="contacto-correo" class="form-control" maxlength="100" placeholder="ejemplo@gmail.com" required>
+                        <input type="email" id="contacto-correo" class="form-control" maxlength="100"
+                            placeholder="ejemplo@gmail.com" required>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label fw-bold">COMENTARIO</label>
-                        <textarea id="contacto-comentario" class="form-control" rows="5" maxlength="500" required></textarea>
+                        <textarea id="contacto-comentario" class="form-control" rows="5" maxlength="500"
+                            required></textarea>
                         <div id="char-count" class="text-end small text-muted">0 / 500</div>
                     </div>
 
