--- a/Pasteleria-mil-sabores (Luyi.T)/nosotros.html
+++ b/Pasteleria-mil-sabores (Luyi.T)/nosotros.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container">
                 <a class="navbar-brand d-flex align-items-center" href="index.html">
-                    <img src="img/logo.png" alt="Logo Mil Sabores" width="50" class="me-2">
+                    <img src="img/logo.jpg" alt="Logo Mil Sabores"  class="me-2">
                     <h1 class="titulo-brand mb-0">Mil Sabores</h1>
                 </a>
 
@@ -23,11 +23,11 @@
 
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="productos.html">Productos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="blogs.html">Blogs</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="productos.html">Productos</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="nosotros.html">Nosotros</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="blogs.html">Blogs</a></li>
+                        <li class="nav-item"><a class="nav-link nav-principal" href="contacto.html">Contacto</a></li>
                     </ul>
 
                     <div class="d-flex align-items-center user-menu">
@@ -48,18 +48,18 @@
         <section class="row align-items-center mb-5">
             <div class="col-md-6">
                 <h2 class="titulo-artistico">Nuestra Historia</h2>
-                <p>Pastelería Mil Sabores celebra su <strong>50 aniversario</strong> como un referente en la repostería chilena[cite: 8]. Nuestra trayectoria está marcada por hitos memorables, como nuestra participación en un <strong>récord Guinness en 1995</strong> al crear la torta más grande del mundo[cite: 9].</p>
-                <p>Nuestra misión es ofrecer una experiencia dulce y memorable, proporcionando productos de alta calidad mientras celebramos nuestras raíces históricas[cite: 11].</p>
+                <p>Pastelería Mil Sabores celebra su <strong>50 aniversario</strong> como un referente en la repostería chilena[cite: 8]. Nuestra trayectoria está marcada por hitos memorables, como nuestra participación en un <strong>récord Guinness en 1995</strong> al crear la torta más grande del mundo.</p>
+                <p>Nuestra misión es ofrecer una experiencia dulce y memorable, proporcionando productos de alta calidad mientras celebramos nuestras raíces históricas</p>
             </div>
             <div class="col-md-6 text-center">
-                <img src="img/historia-pasteleria.jpg" alt="Historia Mil Sabores" class="img-fluid rounded shadow-sm border-rosa">
+                <img src="img/historia-pasteleria.jpg" alt="Historia Mil Sabores" class="img-fluid rounded shadow-sm border-rosa" >
             </div>
         </section>
 
         <section class="row text-center mb-5 py-4 bg-white rounded shadow-sm">
             <div class="col-md-6 mb-3">
                 <h3 class="titulo-artistico">Misión</h3>
-                <p>Proporcionar tortas de alta calidad para todas las ocasiones y fomentar la creatividad en la repostería[cite: 11].</p>
+                <p>Proporcionar tortas de alta calidad para todas las ocasiones y fomentar la creatividad en la repostería.</p>
             </div>
             <div class="col-md-6 mb-3">
                 <h3 class="titulo-artistico">Visión</h3>
